# curso-pwd-01

./: README.md  pyproject.toml
apps/tasks/: models.py
task_tracker/: settings.py  urls.py
