[tool.poetry]
name = "curso-pwd-01"
version = "0.0.0"
description = "Introduction to Web Programming with Python"
authors = ["Jess Monter"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
